Changes
=======

1.11.6 (unreleased)
-------------------

- Fix the factor that a REQUEST is required to use a field object on
  recent Zope (2.11).

- Fixed field events: copy of forms containing fields and folders
  containing forms was broken.
  
- Added a 'required' validator property to FileFields

- Added a validator for FileFields to check whether the value is a 
  StringType, which is an indicator that the form encoding is set
  incorrectly.  The error message informs the user the form
  encoding should be set to multipart/form-data.

- Property descriptions are now displayed on the edit tab.  These already existed
  but were never exposed in the ZMI.

1.11.5 (2008/30/09)
-------------------

- Reformat documentation to ReST to release an egg.

1.11.4
------

Bugs fixed:

- Zope i18n *needs* an 'en' directory, or browsers like firefox will
  use the first language in the language preferences list that does
  have a translation, even if english is above it in the list of
  preferences.

- Tainted strings caused instance error, converted tainted strings
  back to strings.

- Small fix to Selection Field Validators, whose 'validate' functions
  failed if items values are stored as unicode

- update imports needed by the file system Formulator form
  representation, if CMF is installed.  Now both CMF 1.x (for Plone
  2.x) and CMF 2.x (for Plone 3.x) should work.  Patch provided by
  "lcanacheu".

- checkbox fields and multicheckboxfield items are now rendered with
  labels around them.

1.11.3
------

Bugs fixed:

- Field Validators 'validate' functions did not accept unicode
  values as input on fields that require unicode.

- Zope 2.10 compatibility: "MessageIDFactory" got renamed to
  "MessageFactory"; same for "MessageID"; the monkey to allow
  this class got influenced, too, so all ZODB importing that
  class need to be updated, too (Problem reported by Yinghoong
  Chan and Josef Meile)

- Zope 2.10 event handling. Formulator now uses Zope 3 style